[Fixes #54688330] Removes accordian from trip details.  It wasn't needed and the formatting around it took up too much space.

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -74,6 +74,11 @@ a:hover#help {
   font-size: 1.5em;
 }
 
+#details-title {
+  font-weight: bold;
+  color: #0088cc;
+}
+
 .start_icon {
   color: #51e43f;
 }
